<resources>
    <!--spinner item value-->
    <string-array name="act_idle_sale_add_spinner_item">
        <item>test</item>
        <item>test</item>
        <item>test</item>
    </string-array>
    <string name="app_name">火蚁</string>
    <string name="bot_tv_home">首页</string>
    <string name="bot_tv_message">消息</string>
    <string name="bot_tv_find">发现</string>
    <string name="bot_tv_user">我的</string>
    <string name="frag_home_campus_recruitment">校园招聘</string>
    <string name="frag_home_idle_sale">闲置出售</string>
    <string name="frag_home_buy_zone">求购专区</string>
    <string name="frag_user_buy_zone">我的求购</string>
    <string name="frag_home_bounty_hall">赏金大厅</string>
    <string name="frag_home_association">社团</string>
    <string name="frag_home_campus_information">校园资讯</string>
    <string name="frag_home_partner">合伙人</string>
    <string name="frag_home_peripheral_shop">周边店铺</string>
    <string name="frag_find_school">龙岩学院</string>
    <string name="frag_find_hint">分享我的生活</string>
    <string name="frag_user_name_hint">名称：</string>
    <string name="frag_user_department_hint">院系：</string>
    <string name="frag_user_balance_hint">余额：</string>
    <string name="frag_user_recharge">充值</string>
    <string name="frag_user_bounty_mission">赏金任务</string>
    <string name="frag_user_my_idle">我的闲置</string>
    <string name="frag_user_my_buy">我的求购</string>
    <string name="frag_user_my_club">我的社团</string>
    <string name="frag_user_join_task">我接受的任务</string>
    <string name="frag_user_about_us">关于我们</string>
    <string name="frag_user_update">检查更新</string>
    <string name="toolbar_with_search_hint">搜索</string>
    <string name="toolbar_with_search_screen">筛选</string>
    <string name="act_campus_recruitment_general_recruitment">普通招聘</string>
    <string name="act_campus_recruitment_part_time_job">勤工俭学/兼职</string>
    <string name="frag_campus_recruitment_wages_symbol">¥</string>
    <string name="act_buy_zone_liked">点赞</string>
    <string name="act_buy_zone_message">留言</string>
    <string name="act_buy_zone_expected_price">期望价格</string>
    <string name="act_bounty_hall_need">需要</string>
    <string name="act_bounty_hall_sign_up">报名</string>
    <string name="act_bounty_hall_selected">已选</string>
    <string name="act_association_follow">关注</string>
    <string name="act_association_num_hint">社团人数：</string>
    <string name="act_campus_information_source_hint">来自：</string>
    <string name="act_peripheral_shop_grade_symbol">分</string>
    <string name="act_peropheral_shop_bussiness_hours_hint">营业时间</string>
    <string name="act_release_live_toolbar_right">发送</string>
    <string name="act_release_live_hint">说点什么吧....</string>
    <string name="act_user_setting_department">院系</string>
    <string name="act_user_setting_name">昵称</string>
    <string name="act_user_setting_head">头像</string>
    <string name="act_modify_save">保存</string>
    <string name="act_modify_head_choice">选择头像</string>
    <string name="act_modify_department_hint">院系</string>
    <string name="act_user_setting_toolbar_title">设置</string>
    <string name="act_modify_department_toolbar_title">修改院系</string>
    <string name="act_modify_head_toolbar_title">修改头像</string>
    <string name="act_modify_nickname_toolbar_title">修改昵称</string>
    <string name="act_campus_recruitment_detail_feedback">平均48小时反馈</string>
    <string name="act_campus_recruitment_position_introduction">职位介绍</string>
    <string name="act_campus_recruitment_responsibilities">岗位职责</string>
    <string name="act_campus_recruitment_job_requirements">任职要求</string>
    <string name="act_idle_sale_detail_time_hint">发布时间：</string>
    <string name="act_idle_sale_detail_phone_hint">手机：</string>
    <string name="act_detail">详情</string>
    <string name="act_idle_sale_add_mode_hint">交易方式</string>
    <string name="action_settings">Settings</string>
    <string name="act_idle_sale_add_toolbar_title">商品发布</string>
    <string name="act_idle_sale_add_title_hint">标题</string>
    <string name="act_idle_sale_add_price_hint">价格</string>
    <string name="act_idle_sale_add_place_hint">交易地点</string>
    <string name="act_idle_sale_add_degree_hint">新旧程度</string>
    <string name="act_idle_sale_add_phone_hint">联系方式</string>
    <string name="act_idle_sale_add_describe_hint">简要描述</string>
    <string name="act_idle_sale_add_release">发布</string>
    <string name="act_buy_zone_place_hint">发布于</string>
    <string name="act_buy_zone_time_hint">来过</string>
    <string name="act_buy_zone_message_hint">留言</string>
    <string name="act_buy_zone_add_toolbar_title">求购发布</string>
    <string name="act_my_bounty_hall_toolbar_title">我的赏金</string>
    <string name="act_my_bounty_hall_demand">需求：</string>
    <string name="act_my_bounty_hall_cost">费用：</string>
    <string name="act_my_bounty_hall_end_time">截止：</string>
    <string name="act_my_bounty_hall_demand_unit">人</string>
    <string name="act_bounty_hall_detail_toolbar_title">任务详情</string>
    <string name="act_registration_detail_remuneration">报酬：</string>
    <string name="act_registration_detail_phone">电话：</string>
    <string name="act_registration_detail_place">地点</string>
    <string name="act_registration_detail_evaluate">历史评价</string>
    <string name="act_registration_detail_remarks">备注：</string>
    <string name="act_registration_detail_toolbar_title">报名详情</string>
    <string name="act_bounty_hall_add_release">发布</string>
    <string name="act_bounty_hall_add_title">标题</string>
    <string name="act_bounty_hall_add_title_hint">标题内容</string>
    <string name="act_bounty_hall_add_detail">详细</string>
    <string name="act_bounty_hall_add_detail_hint">请填写详情内容</string>
    <string name="act_bounty_hall_add_bounty">赏金</string>
    <string name="act_bounty_hall_add_bounty_hint">我愿意支付每个人的费用</string>
    <string name="act_bounty_hall_add_key">关键字</string>
    <string name="act_bounty_hall_add_key_hint">请填写任务关键字</string>
    <string name="act_bounty_hall_add_linkman">联系人</string>
    <string name="act_bounty_hall_add_linkman_hint">请填写联系人</string>
    <string name="act_bounty_hall_add_type">分类</string>
    <string name="act_bounty_hall_add_type_hint">请选择</string>
    <string name="act_bounty_hall_add_num">需要人数</string>
    <string name="act_bounty_hall_add_end_time">有效期至</string>
    <string name="act_bounty_hall_add_end_date_hint">请为任务选择一个截止日期</string>
    <string name="act_bounty_hall_add_end_time_hint">请为任务选择一个截止时间</string>
    <string name="act_bounty_hall_add_toolbar_title">任务发布</string>
    <string name="act_association_detail_toolbar_title">社团主页</string>
    <string name="act_association_members_title">社团成员</string>
    <string name="act_partner_detail_profile">项目简介：</string>
    <string name="act_partner_detail_company_name">名称：</string>
    <string name="act_partner_detail_type">招募合伙人类型：</string>
    <string name="act_partner_detail_phone">联系方式：</string>
    <string name="act_partner_detail_place">地址：</string>
    <string name="act_partner_detail_explain">详细说明:</string>
    <string name="act_partner_detail_toolbar_title">项目详情</string>
    <string name="act_notice_toolbar_title">社团公告</string>
    <string name="act_post_detail_toolbar_title">帖子详情</string>
    <string name="act_post_add_post">发帖</string>
    <string name="act_post_add_toolbar_title">发布帖子</string>
    <string name="act_notice_add_toolbar_title">公告发布</string>
    <string name="act_release_live_toolbar_title">分享生活</string>
    <string name="act_idle_sale_add_type_hint">讨价类型</string>
    <string name="act_bounty_hall_detail_real_name_authentication">已实名认证</string>
    <string name="act_bounty_hall_detail_task">任务</string>
    <string name="left_parenthesis">（</string>
    <string name="right_parenthesis">）</string>
    <string name="act_bounty_hall_detail_skill">技能</string>
    <string name="act_bounty_hall_detail_help">众帮</string>
    <string name="act_bounty_hall_detail_price_hint">预算</string>
    <string name="act_bounty_hall_detail_people_num_hint">人报名</string>
    <string name="act_bounty_hall_detail_time_hint">发布</string>
    <string name="act_bounty_hall_detail_remaining_time">招标剩余时间：</string>
    <string name="act_bounty_hall_detail_completion_time">计划完成时间：</string>
    <string name="act_bounty_hall_detail_contact_people">联系人：</string>
    <string name="act_bounty_hall_detail_phone">联系方式：</string>
    <string name="act_bounty_hall_detail_contact_place">联系地址：</string>
    <string name="act_bounty_hall_detail_describe">任务描述：</string>
    <string name="loading_progress_bar_title">加载中...</string>
    <string name="pushing_progress_bar_title">发布中...</string>
    <string name="operating_progress_bar_title">操作中...</string>
    <string name="Modifying_progress_bar_title">修改中...</string>
    <string name="Login_progress_bar_title">登录中...</string>
    <string name="register_progress_bar_title">注册中...</string>
    <string name="act_idle_sale_detail_qq_hint">QQ：</string>
    <string name="act_idle_sale_detail_content_hint">简要描述：</string>
    <string name="act_idle_sale_add_goods_type_hint_hint">商品类型</string>
    <string name="act_idle_sale_add_qq_hint">QQ</string>
    <string name="act_login">登录</string>
    <string name="act_register">注册</string>
    <string name="act_login_username">请输入手机号</string>
    <string name="act_login_password">请输入密码</string>
    <string name="act_login_forget_password">忘记密码？</string>
    <string name="act_register_phone">请输入手机号</string>
    <string name="act_register_fetch_captcha">获取验证码</string>
    <string name="act_register_captcha">请输入验证码</string>
    <string name="act_register_password">设置密码</string>
    <string name="act_register_password_again">确认密码</string>
    <string name="act_register_nickname">请输入昵称</string>
    <string name="act_register_department">请选择院系</string>
    <string name="act_register_sex">请选择性别</string>
    <string name="act_forget_password_captcha">请输入手机收到的验证码</string>
    <string name="act_random_code_captcha">随机验证码</string>
    <string name="next">下一步</string>
    <string name="entel">确认</string>
    <string name="act_forget_passwrod_toolbar_title">找回密码</string>
    <string name="act_reset_password_toolbar_title">重设密码</string>
    <string name="frag_user_login"><![CDATA[请点击登录>]]></string>
    <string name="act_buy_zone_qq_hint">QQ(选填)</string>
    <string name="act_bounty_halll_item_end_hint">结束</string>
    <string name="act_registertion_money">金额</string>
    <string name="act_registertion_money_hint">期望报酬</string>
    <string name="act_registertion_summary">备注</string>
    <string name="act_registertion_summary_hint">备注内容</string>
    <string name="act_registertion_join">报名</string>
    <string name="act_registration_toolbar_title">报名</string>
    <string name="act_user_setting_passwrod">修改密码</string>
    <string name="act_modif_password_old_password">旧密码</string>
    <string name="act_modif_password_new_password">新密码</string>
    <string name="act_modif_password_new_password_again">确认密码</string>
    <string name="act_modify_password_toolbar_title">修改密码</string>
    <string name="act_user_setting_logout">退出登录</string>
    <string name="act_leave_message_et_hint">请输入文字信息</string>
    <string name="act_release_notice_hint">发布公告</string>
    <string name="act_association_members_hint">社团成员</string>
</resources>
