<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:background="@color/colorWhite"
                  android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            style="@style/toolbar_height"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            >

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"/>
        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/act_registertion_money"
                android:textSize="16sp"/>

            <EditText
                android:maxLength="5"
                android:id="@+id/et_bounty"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:background="@null"
                android:hint="@string/act_registertion_money_hint"
                android:inputType="number"
                android:textColorHint="@color/colorGray"
                android:textSize="16sp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:background="@color/colorGray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/act_idle_sale_add_phone_hint"
                android:textSize="16sp"/>

            <EditText
                android:maxLength="11"
                android:inputType="phone"
                android:id="@+id/et_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:background="@null"
                android:hint="@string/act_register_phone"
                android:textColorHint="@color/colorGray"
                android:textSize="16sp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/act_registertion_summary"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/et_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:background="@null"
                android:ellipsize="end"
                android:gravity="start"
                android:hint="@string/act_registertion_summary_hint"
                android:lines="4"
                android:maxLines="4"
                android:textColorHint="@color/colorGray"
                android:textSize="16sp"/>
        </LinearLayout>
        <Button
            android:id="@+id/btn_join"
            android:layout_width="150dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@color/colorPrimary"
            android:text="@string/act_registertion_join"
            android:textColor="@color/colorWhite"/>
    </LinearLayout>

    <include layout="@layout/progress_bar"></include>
</RelativeLayout>