<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:background="@color/colorWhite"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:background="@color/colorPrimary"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        >
        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"/>
        <TextView
            android:background="?android:attr/selectableItemBackground"
            android:textSize="18sp"
            android:text="@string/act_bounty_hall_add_release"
            android:textColor="@color/colorWhite"
            android:id="@+id/tv_toolbar_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"/>
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="16sp"
            android:text="@string/act_bounty_hall_add_title"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/et_title"
            android:textColorHint="@color/colorGray"
            android:textSize="16sp"
            android:hint="@string/act_bounty_hall_add_title_hint"
            android:background="@null"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGray"/>
    <LinearLayout
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="16sp"
            android:text="@string/act_bounty_hall_add_detail"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/et_detail"
            android:textColorHint="@color/colorGray"
            android:textSize="16sp"
            android:hint="@string/act_bounty_hall_add_detail_hint"
            android:maxLines="4"
            android:lines="4"
            android:ellipsize="end"
            android:gravity="start"
            android:background="@null"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGray"/>
    <LinearLayout
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="16sp"
            android:text="@string/act_bounty_hall_add_bounty"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <EditText
            android:inputType="number"
            android:id="@+id/et_bounty"
            android:textColorHint="@color/colorGray"
            android:textSize="16sp"
            android:hint="@string/act_bounty_hall_add_bounty_hint"
            android:background="@null"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@color/colorGray"/>
    <LinearLayout
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="16sp"
            android:text="@string/act_bounty_hall_add_place"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/tv_position"
            android:textColorHint="@color/colorGray"
            android:textSize="16sp"
            android:hint="@string/act_bounty_hall_add_place_hint"
            android:background="@null"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@color/colorGray"/>
    <RelativeLayout
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_alignBottom="@+id/spinner_type"
            android:textSize="16sp"
            android:text="@string/act_bounty_hall_add_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_toLeftOf="@+id/spinner_type"
            android:textSize="16sp"
            android:layout_alignBottom="@+id/spinner_type"
            android:text="@string/act_bounty_hall_add_type_hint"
            android:textColor="@color/colorGray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Spinner
            android:id="@+id/spinner_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            >
        </Spinner>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGray"/>
    <LinearLayout
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="16sp"
            android:text="@string/act_bounty_hall_add_num"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/et_num"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:background="@null"
            android:gravity="right"
            android:inputType="number"
            android:textColorHint="@color/colorGray"
            android:textSize="16sp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGray"/>
    <RelativeLayout
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_alignBottom="@+id/spinner_end_time"
            android:textSize="16sp"
            android:text="@string/act_bounty_hall_add_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_toLeftOf="@+id/spinner_end_time"
            android:textSize="16sp"
            android:layout_alignBottom="@+id/spinner_end_time"
            android:text="@string/act_bounty_hall_add_end_time_hint"
            android:textColor="@color/colorGray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Spinner
            android:id="@+id/spinner_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            >
        </Spinner>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGray"/>
</LinearLayout>